<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.khangvu.nytimessearch.activities.FilterSettingActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/begin_date_text"
            android:id="@+id/begin_date_text_view"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/date_edit_text"
            android:layout_alignBaseline="@+id/begin_date_text_view"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/date_text"
            android:inputType="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_text"
            android:id="@+id/sort_text_view"
            android:layout_alignLeft="@+id/begin_date_text_view"
            android:layout_alignStart="@id/begin_date_text_view"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/date_edit_text" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_alignTop="@+id/sort_text_view"
            android:layout_alignLeft="@+id/date_edit_text"
            android:layout_alignStart="@+id/date_edit_text"
            android:layout_below="@+id/date_edit_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_desk_values_text"
            android:id="@+id/news_desk_values_text_view"
            android:layout_below="@+id/sort_text_view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="48dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/art_text"
            android:id="@+id/checkBox"
            android:layout_alignTop="@+id/news_desk_values_text_view"
            android:layout_alignLeft="@+id/spinner"
            android:layout_alignStart="@+id/spinner" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fashion_text"
            android:id="@+id/checkBox2"
            android:layout_below="@+id/checkBox"
            android:layout_alignLeft="@+id/checkBox"
            android:layout_alignStart="@+id/checkBox" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport_text"
            android:id="@+id/checkBox3"
            android:layout_below="@+id/checkBox2"
            android:layout_alignLeft="@+id/checkBox2"
            android:layout_alignStart="@+id/checkBox2" />

    </RelativeLayout>
</ScrollView>
